[gd_scene load_steps=9 format=3 uid="uid://cqjcrc5ipjaap"]

[ext_resource type="Script" path="res://scenes/entry.gd" id="1_8w4oi"]
[ext_resource type="Texture2D" uid="uid://cnj0347iuytvp" path="res://assets/Entry.png" id="1_nysd4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wotf7"]
size = Vector2(32, 64)

[sub_resource type="Animation" id="Animation_8umpn"]
resource_name = "EntryAnimation"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.8, 1.36667, 1.86667, 2.4, 2.63333, 2.83333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DoorBlockShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.733333, 2.36667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Killzone:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0666667, 0.733333, 2.33333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.533333, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_44wpy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../DoorBlockShape:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Killzone:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../StaticBody2D/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sbnqv"]
_data = {
"EntryAnimation": SubResource("Animation_8umpn"),
"RESET": SubResource("Animation_44wpy")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ubiik"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2lbwj"]
size = Vector2(32, 62)

[node name="EntryTrap" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_8w4oi")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_nysd4")
hframes = 8

[node name="DoorBlockShape" type="CollisionShape2D" parent="." groups=["door_block_shape"]]
shape = SubResource("RectangleShape2D_wotf7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_sbnqv")
}
autoplay = "EntryAnimation"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Killzone" type="CollisionShape2D" parent="." groups=["killer_shape"]]
light_mask = 2
shape = SubResource("RectangleShape2D_ubiik")
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_2lbwj")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
